--- a/src/layouts/_footer.ejs
+++ b/src/layouts/_footer.ejs
@@ -1,3 +1,5 @@
+    <div class="copyright">&copy; funnythingz</div>
+
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
     <script src="<%= data.baseUrl %>scripts/main.js" type="text/javascript"></script>
