--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 @import 'http://fonts.googleapis.com/css?family=Merriweather|Open+Sans';
 @import 'compass';
 @import 'normalize';
-@import 'solarized-dark';
+//@import 'solarized-dark';
+@import 'monokai';
 
 @import 'base';
 @import 'markdown';
