--- a/src/pages/projects.ejs
+++ b/src/pages/projects.ejs
@@ -1,4 +1,10 @@
 <% locals.title = 'Projects' %>
 <% include ../layouts/_header %>
 <h1>Projects</h1>
+<ul>
+    <li><a href="https://github.com/funnythingz/hackleview" target="_blank">hackleview</a></li>
+    <li><a href="https://github.com/hackleberry" target="_blank">hackleberry</a></li>
+    <li><a href="http://www.funnythingz.com/qflipper/" target="_blank">qflipper</a></li>
+    <li><a href="http://www.funnythingz.com/zflickjs/" target="_blank">zflickjs</a></li>
+</ul>
 <% include ../layouts/_footer %>
