--- a/src/layouts/_postHead.ejs
+++ b/src/layouts/_postHead.ejs
@@ -1,6 +1,10 @@
 <div class="post-head group">
-  <a href="<%= data.baseUrl %><%= post.url %>">
-    <h1 class="post-title"><%= post.title %></h1>
-  </a>
-  <span class="post-date"><%- [post.date.getUTCFullYear(), post.date.getUTCMonth() + 1, post.date.getUTCDate()].join(' &#183; ') %></span>
+    <a href="<%= data.baseUrl %><%= post.url %>">
+        <h1 class="post-title"><%= post.title %></h1>
+    </a>
+    <span class="post-date"><%- [post.date.getUTCFullYear(), post.date.getUTCMonth() + 1, post.date.getUTCDate()].join(' &#183; ') %></span>
+</div>
+<div class="tweet-button">
+    <a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= post.title %>" data-url="http://www.funnythingz.com<%= data.baseUrl %><%= post.url %>" data-counturl="http://www.funnythingz.com<%= data.baseUrl %><%= post.url %>" data-lang="en" data-via="funnythingz">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
