--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import 'http://fonts.googleapis.com/css?family=Merriweather|Open+Sans';
 @import 'compass';
 @import 'normalize';
-//@import 'solarized-dark';
+
 @import 'monokai';
 
 @import 'base';
@@ -12,3 +12,5 @@
 
 @import 'copyright';
 @import 'tehepero';
+
+@import 'social-button';
