updated highlight font

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -91,5 +91,6 @@ code {
   pre {
     padding: 15px;
     margin-bottom: 0;
+    font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
   }
 }
