--- a/source/layout.slim
+++ b/source/layout.slim
@@ -2,11 +2,21 @@ doctype html
 html
   head
     meta[charset="utf-8"]
+    meta[name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0, maximum-scale=10"]
     meta[http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"]
     title
-      | Blog Title
+      | funnythingz
       = ' - ' + current_article.title unless current_article.nil?
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
+    meta[property="og:type" content="article"]
+    meta[property="og:description" content="てきとうなblogです"]
+    meta[property="og:site_name" content="funnythingz"]
+    - if current_article
+      meta property="og:title" content="#{current_article.title}"
+      meta property="og:url" content="http://www.funnythingz.com#{current_article.url}"
+    - else
+      meta[property="og:title" content="funnythingz"]
+      meta[property="og:url" content="http://www.funnythingz.com"]
 
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css"
     script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"
