--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -14,11 +14,12 @@ per_page: 10
       p
         = link_to 'Previous page', prev_page
   - page_articles.each_with_index do |article, i|
-    h2
-      = link_to article.title, article
-      span
-        = article.date.strftime('%b %e')
-    = article.body
+    article.entry
+      h1
+        = link_to article.title, article
+        span.meta
+          = article.date.strftime('%b %e')
+      = article.body
   - if paginate
     - if next_page
       p
