--- a/source/layout.slim
+++ b/source/layout.slim
@@ -20,7 +20,7 @@ html
 
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css"
     link[href="/css/styles.css" rel="stylesheet" type="text/css"]
-    link href='http://fonts.googleapis.com/css?family=Butterfly+Kids|Schoolbell' rel='stylesheet' type='text/css'
+    link href='http://fonts.googleapis.com/css?family=Butterfly+Kids|Schoolbell|monaco' rel='stylesheet' type='text/css'
     script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"
                    
   body
