--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -15,10 +15,16 @@ per_page: 10
 - page_articles.each_with_index do |article, i|
   article.entry
     h1
-      = link_to article.title, article
+      = link_to article
+        i.fa.fa-paper-plane-o
+        |  #{article.title}
       span.meta
         = article.date.strftime('%b %e')
-    = article.body
+    = article.summary
+    - unless article.summary == article.body
+      = link_to article
+        i.fa.fa-arrow-circle-right
+        |  READ MORE
 - if paginate
   - if next_page
     p
