--- a/source/layout.slim
+++ b/source/layout.slim
@@ -18,6 +18,7 @@ html
       meta[property="og:title" content="funnythingz"]
       meta[property="og:url" content="http://www.funnythingz.com"]
 
+    link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css"
     link[href="/css/styles.css" rel="stylesheet" type="text/css"]
     link href='http://fonts.googleapis.com/css?family=Butterfly+Kids|Schoolbell|monaco' rel='stylesheet' type='text/css'
@@ -36,7 +37,8 @@ html
         article.entry
           - unless current_article.nil?
             h1
-              = current_article.title
+              i.fa.fa-paper-plane-o
+              |  #{current_article.title}
               span.meta
                 = current_article.date.strftime('%b %e')
           = yield
