--- a/source/layout.slim
+++ b/source/layout.slim
@@ -11,6 +11,7 @@ html
     meta[property="og:type" content="article"]
     meta[property="og:description" content="てきとうなblogです"]
     meta[property="og:site_name" content="funnythingz"]
+    meta[property="og:image" content="http://www.gravatar.com/avatar/cdebab59b91486c987461497dd901a91.png"]
     - if current_article
       meta property="og:title" content="#{current_article.title}"
       meta property="og:url" content="http://www.funnythingz.com#{current_article.url}"
