--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -57,6 +57,12 @@ code {
     @extend %_link;
   }
 
+  > h4 {
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 1.5;
+  }
+
   > ul {
     margin-left: 1em;
     li {
