--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -38,9 +38,15 @@ code {
   }
 }
 
+.container {
+  width: 100%;
+  padding: 0 1em;
+}
+
 .entry {
   > h1 {
     font-size: 24px;
+    line-height: 1.5;
     @extend %_link;
   }
 
