--- a/source/layout.slim
+++ b/source/layout.slim
@@ -72,7 +72,7 @@ html
             h1
               i.fa.fa-newspaper-o
               |  Recent Articles
-            ol.recent-list
+            ul.recent-list
               - blog.articles[0...10].each do |article|
                 li
                   = link_to article.title, article
@@ -82,7 +82,7 @@ html
             h1
               i.fa.fa-rocket
               |  Tags
-            ol
+            ul
               - blog.tags.each do |tag, articles|
                 li
                   = link_to "#{tag} (#{articles.size})", tag_path(tag)
@@ -90,7 +90,7 @@ html
             h1
               i.fa.fa-calendar-o
               |  By Year
-            ol
+            ul
               - blog.articles.group_by {|a| a.date.year }.each do |year, articles|
                 li
                   = link_to "#{year} (#{articles.size})", blog_year_path(year)
