--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -1,5 +1,3 @@
-@import "compass/css3";
-
 @import "pre";
 @import "monokai";
 
@@ -21,7 +19,7 @@
 
 code {
   background-color: rgba(0,0,0,0.04);
-  @include border-radius(3px);
+  border-radius: 3px;
   padding: 2px 4px;
   font-size: 13px;
   font-family: 'monaco';
@@ -40,12 +38,14 @@ code {
 
 .container {
   width: 100%;
+  max-width: 820px;
   padding: 0 1em;
 }
 
-.entry {
+.entry, .summary {
   > h1 {
     font-size: 24px;
+    font-weight: bold;
     line-height: 1.5;
     @extend %_link;
   }
@@ -87,6 +87,23 @@ code {
     max-height: 480px;
     max-width: 100%;
   }
+
+  > p {
+    font-size: 16px;
+    line-height: 2;
+  }
+
+  .fb-like {
+    > span {
+      vertical-align: top !important;
+    }
+  }
+}
+
+.summary {
+  padding-bottom: 10px;
+  border-bottom: dotted 1px #ddd;
+  margin-bottom: 40px;
 }
 
 footer {
@@ -130,7 +147,7 @@ ul {
   text-align: right;
   li {
     list-style: none;
-    @include inline-block;
+    display: inline-block;
     vertical-align: top;
   }
 }
