--- a/source/layout.slim
+++ b/source/layout.slim
@@ -11,18 +11,18 @@ html
     meta[property="og:type" content="article"]
     meta[property="og:description" content="てきとうなblogです"]
     meta[property="og:site_name" content="funnythingz"]
-    meta[property="og:image" content="http://www.gravatar.com/avatar/cdebab59b91486c987461497dd901a91.png"]
+    meta[property="og:image" content="https://www.gravatar.com/avatar/cdebab59b91486c987461497dd901a91.png"]
     - if current_article
       meta property="og:title" content="#{current_article.title}"
-      meta property="og:url" content="http://www.funnythingz.com#{current_article.url}"
+      meta property="og:url" content="https://www.funnythingz.com#{current_article.url}"
     - else
       meta[property="og:title" content="funnythingz"]
-      meta[property="og:url" content="http://www.funnythingz.com"]
+      meta[property="og:url" content="https://www.funnythingz.com"]
 
     link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css"
     link[href="/css/styles.css" rel="stylesheet" type="text/css"]
-    link href='http://fonts.googleapis.com/css?family=Butterfly+Kids|Schoolbell|monaco' rel='stylesheet' type='text/css'
+    link href='https://fonts.googleapis.com/css?family=Butterfly+Kids|Schoolbell|monaco' rel='stylesheet' type='text/css'
     script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"
     script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"
                    
@@ -30,7 +30,7 @@ html
     header.header
       .container
         h1.logo
-          = link_to 'http://www.funnythingz.com'
+          = link_to 'https://www.funnythingz.com'
             | funnythingz
         p.description
           | てきとうなblogです
@@ -45,11 +45,11 @@ html
                 = current_article.date.strftime('%b %e')
             ul.external-link
               li
-                a href="http://b.hatena.ne.jp/entry/http://www.funnythingz.com#{current_article.url}" class="hatena-bookmark-button" data-hatena-bookmark-title="#{current_article.title}" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"
+                a href="https://b.hatena.ne.jp/entry/https://www.funnythingz.com#{current_article.url}" class="hatena-bookmark-button" data-hatena-bookmark-title="#{current_article.title}" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"
                 img[src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;"]
                 script[type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"]
               li
-                .fb-like data-href="http://www.funnythingz.com#{current_article.url}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"
+                .fb-like data-href="https://www.funnythingz.com#{current_article.url}" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"
                 #fb-root
                 javascript:
                   (function(d, s, id) {
@@ -60,7 +60,7 @@ html
                   fjs.parentNode.insertBefore(js, fjs);
                   }(document, 'script', 'facebook-jssdk'));
               li
-                a class="twitter-share-button" href="https://twitter.com/share" data-url="http://www.funnythingz.com#{current_article.url}" data-via="funnythingz" data-text="#{current_article.title}"
+                a class="twitter-share-button" href="https://twitter.com/share" data-url="https://www.funnythingz.com#{current_article.url}" data-via="funnythingz" data-text="#{current_article.title}"
                   | Tweet 
                 javascript:
                   window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
