--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -9,7 +9,7 @@ per_page: 10
       = link_to article
         | #{article.title}
       span.meta
-        = article.date.strftime('%b %e')
+        = article.date.strftime('%Y/%-m/%-d')
     ul.external-link
       li
         a href="https://b.hatena.ne.jp/entry/https://www.funnythingz.com#{article.url}" class="hatena-bookmark-button" data-hatena-bookmark-title="#{article.title}" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"
